--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,10 +2,10 @@
 #spring.h2.console.enabled=true
 
 # 히카리 CP 설정. 세부 내용은 HikariConfig.class 참조
-#spring.datasource.hikari.maximum-pool-size=4
+spring.datasource.hikari.maximum-pool-size=4
 
 # Spring Datasource MySQL setting
-#spring.datasource.url=jdbc:h2:mem:testdb
-#spring.datasource.driverClassName=org.h2.Driver
-#spring.datasource.username=sa
-#spring.datasource.password=
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
