--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,16 @@
 # H2 Console 활성화
 #spring.h2.console.enabled=true
-
 # 히카리 CP 설정. 세부 내용은 HikariConfig.class 참조
 spring.datasource.hikari.maximum-pool-size=4
-
 # Spring Datasource MySQL setting
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
+
+
+# logging-level set-up
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+logging.level.org.springframework.security=DEBUG
